testsuite/tests/parse-errors/unclosed_class_simpl_expr1.compilers.reference
File "unclosed_class_simpl_expr1.ml", line 10, characters 0-0:
Error: Syntax error: 'end' expected
File "unclosed_class_simpl_expr1.ml", line 8, characters 10-16:
8 | class c = object
              ^^^^^^
  This 'object' might be unmatched
